k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hello.abhinva-test.zeeve.net
      secretName: terraform-tls-secret 
  rules:
    - hosts: hello.abhinva-test.zeeve.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-kubernetes
                port:
                  number: 80
